crates/gitea-core/src/error/snapshots/gitea_core__error__render__tests__snapshot_resource_not_found_on_a_collection_without_a_message.snap
---
source: crates/gitea-core/src/error/render.rs
expression: "snap(ErrorKind::ResourceNotFound\n{\n    kind: \"pull request\", id: String::new(), slug:\n    Some(\"perf3ct/gea\".into()), server_message: None,\n}, c)"
---
error: referenced resource not found in perf3ct/gea (HTTP 404)

  request:    POST /api/v1/repos/perf3ct/gea/pulls
  repository: perf3ct/gea  (found)

what to do:
  this request has no pull request identifier. Check referenced branch, tag, or
  user names.
  1. check branch, tag, and user names in the request body
  2. gea api repos/perf3ct/gea/branches --jq '.[].name'
  3. gea api repos/perf3ct/gea/tags --jq '.[].name'
  note: when creating a pull request, check --head and --base.
